# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
solutions/: aoc2015.py  aoc2016.py  aoc2017.py  aoc2019.py  aoc2020.py  aoc2021.py  aoc2022.py  toolbox.py
