[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Solutions to the advent of code problems"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.3"
pandas = "^1.4.2"
aocd = "^0.1"
networkx = "^2.8"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.18.1"
pylint = "^2.13.7"
jupytext = "^1.13.8"
pre-commit-hooks = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.jupytext]
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"

[tool.jupytext.formats]
"notebooks/" = "ipynb"
"scripts/" = "py:percent"
